# technically-automod

./: LICENSE  README.md  example_config.json  pyproject.toml
technically_automod/: __init__.py  automod.py  discordpy.py  disnake.py  nextcord.py
test/: config.json  test_discordpy.py  test_disnake.py  test_nextcord.py
