[project]
name = "technically-automod"
version = "0.1.1"
description = "Message intent justification for Python-based Discord bots"
authors = [
    {name = "nwunderly",email = "nwunder.dev@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp (>=3.14.1,<4.0.0)",
]

[project.optional-dependencies]
nextcord = ["nextcord (>=3.2.0,<4.0.0)"]
disnake = ["disnake (>=2.12.0,<3.0.0)"]
"discord.py" = ["discord-py (>=2.7.1,<3.0.0)"]

[project.urls]
documentation = "https://github.com/nwunderly/technically-automod"
homepage = "https://github.com/nwunderly/technically-automod"
repository = "https://github.com/nwunderly/technically-automod.git"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
